# app.py
@@ -1,46 +1,41 @@
 import connexion
 from flask_migrate import Migrate
 from flask_sqlalchemy import SQLAlchemy
+from order import *
 
 
-def create_order():
-    new_order = Order(user_id=create_order['user_id'],
-                      delivery_time=create_order['delivery_time'],
-                      priority=create_order['priority'], note=create_order['note'])
+def create_order(createorder_body):
+    new_order = Order(orderId=createorder_body['orderId'],description=createorder_body['description'],
+                      courier_assigned = createorder_body['courier_assigned'],
+                      priority=createorder_body['priority'],
+                      order_state=createorder_body['order_state'],
+                      delivery_time=createorder_body['delivery_time'],
+                      )
     db.session.add(new_order)
     db.session.commit()
-    return {'user_id': Order.user_id}
+    return result_order(new_order)
 
 
 def add_courier(courier_body):
-    new_courier = Courier(id=courier_body['id'], name=courier_body['name'],
+    new_courier = Courier(courierId=courier_body['courierId'], name=courier_body['name'],
                           location=courier_body['location'])
     db.session.add(new_courier)
     db.session.commit()
-
-    return {
-        'courier_id': new_courier.id, 'courier_name': new_courier.name,
-        'courier_location': new_courier.location}
+    return result_courier(new_courier)
 
 
 def find_user_order(user_id):
     order = Order.query.filter_by(user_id=user_id).all()
     if order:
-        return {
-            'user_id' : order.user_id,
-            'order_state' : order.order_state,
-            'note' : order.note,
-            'delivery_time' : order.delivery_time,
-            'courier_assigned' : order.courier_assigned
-        }
+        return result_order(order)
     else:
         return {'message':'error not found'}, 400
 
 
-def edit_order(id, createorder_body):
-    order = db.session.query(Order).filter_by(id=id).first()
+def edit_order(orderId, createorder_body):
+    order = db.session.query(Order).filter_by(orderId=orderId).first()
     if not order:
-        return {'error': '{} not found'.format(id)}, 404
+        return {'error': '{} not found'.format(orderId)}, 404
 
     order.note = createorder_body['note']
     order.courier_assigned = createorder_body['courier_assigned']
@@ -51,16 +46,33 @@ def edit_order(id, createorder_body):
 
     db.session.commit()
 
-    return {'id': order.id,
-            'note': order.note,
-            'courier_assigned': order.courier_assigned,
-            'priority': order.priority,
-            'order_state': order.order_state,
-            'delivery_time': order.delivery_time,
-            'user_id': order.user_id}
+    return result_order(order)
 
 
+def edit_courier(courierId, courier_body):
 
+    courier = db.session.query(Courier).filter_by(courierId=courierId).first()
+
+    if not courier:
+        return {'error': '{} not found'.format(id)}, 404
+
+    courier.name = courier_body['name']
+    courier.location = courier_body['location']
+
+    db.session.commit()
+
+    return result_courier(courier)
+
+
+def updateOrderState(id, state):
+    order = db.session.query(Order).filter_by(id=id).first()
+
+    if not order:
+        return {'error': '{} not found'.format(id)}, 404
+
+    order.order_state = state
+    db.session.commit()
+    return result_order(order)
 
 
 connexion_app = connexion.App(__name__, specification_dir="./")
